# cargo-workspace-demo

./: Cargo.toml  README.md  docker-compose.yaml  main.s
.cargo/: config.toml
cpp/: .gitignore  Makefile  README.md  linker.ld  main.c  polygon.cpp  startup.c
docker/: Dockerfile
docs/: math_libs.md
polygon-cpp/: Makefile  main.c  shapes.c
polygon-rs/: Cargo.toml
polygon-rs/examples/: polygon.rs  shapes.rs
polygon-rs/src/: lib.rs
python/: polygon.py
shape-cpp/: .gitignore  Makefile  shapes.cpp
shape-py/: .gitignore  shapes.py
shape-rs/: Cargo.toml
shape-rs/examples/: shapes.rs
shape-rs/src/: lib.rs
src/: main.rs
templates/: cargo-generate.toml
templates/demo-template/: Cargo.toml  add-hal.rhai  cargo-generate.toml
templates/demo-template/src/: main.rs.liquid
