[package]
name = "cargo_workspace_demo"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "shape-rs",
    "xtask"
]

[profile.release]
debug = false
opt-level = 3               # Use slightly better optimizations.
strip = "debuginfo"
overflow-checks = false     # Disable integer overflow checks.
debug-assertions = false